--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Activación GitHub Pages -->
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -11,26 +9,63 @@
       background-color: #fdf7f0;
       font-family: 'Segoe UI', sans-serif;
     }
+
     .header {
-      background-color: #a05b3b; /* Color que combina con el logo */
-      color: white;
-      padding: 2rem 1rem;
+      background: linear-gradient(to right, #fff8f0, #f3e2cf);
+      padding: 2.5rem 1rem;
       text-align: center;
+      border-bottom: 4px solid #cba27c;
+      animation: fadeIn 1s ease-in-out;
     }
-    .header img {
-      max-width: 220px;
-      height: auto;
-      margin-bottom: 10px;
+
+    .header h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      color: #7B4F2A;
+      margin-bottom: 0.5rem;
     }
+
+    .header .brand-name {
+      font-size: 2.3rem;
+      font-weight: 800;
+      background: linear-gradient(to right, #a05b3b, #c7996d);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+      margin-bottom: 0.8rem;
+      font-family: 'Georgia', serif;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .header p {
+      font-size: 1.1rem;
+      color: #555;
+      margin: 0;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     .product-card {
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       border-radius: 10px;
       overflow: hidden;
       transition: transform 0.2s;
     }
+
     .product-card:hover {
       transform: scale(1.02);
     }
+
     .footer {
       background-color: #a05b3b;
       color: white;
@@ -42,12 +77,11 @@
 </head>
 <body>
 
-  <!-- Encabezado con logo centrado -->
   <div class="header">
-    <img src="img/logo.png" alt="Logo Sabores S&C">
     <h1>Catálogo de Productos</h1>
-    <h3>Sabores S&C</h3>
-    <p>Distribuido y empacado por Sabores S&C - Tel: 50138102</p>
+    <div class="brand-name">Sabores S&C</div>
+    <p>Distribuido y empacado por Sabores S&C</p>
+    <p>Teléfono: 50138102</p>
   </div>
 
   <div class="container mt-5">
@@ -114,4 +148,3 @@
 
 </body>
 </html>
-
