--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo Sabores S&C</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -12,34 +13,34 @@
 
     .header {
       background: linear-gradient(to right, #fff8f0, #f3e2cf);
-      padding: 2.5rem 1rem;
+      padding: 2.5rem 1rem 2rem;
       text-align: center;
       border-bottom: 4px solid #cba27c;
       animation: fadeIn 1s ease-in-out;
     }
 
     .header h1 {
-      font-size: 3rem;
+      font-size: 2.2rem;
       font-weight: 700;
       color: #7B4F2A;
       margin-bottom: 0.5rem;
     }
 
     .header .brand-name {
-      font-size: 2.3rem;
+      font-size: 1.8rem;
       font-weight: 800;
       background: linear-gradient(to right, #a05b3b, #c7996d);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-      margin-bottom: 0.8rem;
+      margin-bottom: 0.6rem;
       font-family: 'Georgia', serif;
       text-transform: uppercase;
       letter-spacing: 1px;
     }
 
     .header p {
-      font-size: 1.1rem;
+      font-size: 1rem;
       color: #555;
       margin: 0;
     }
@@ -60,6 +61,7 @@
       border-radius: 10px;
       overflow: hidden;
       transition: transform 0.2s;
+      height: 100%;
     }
 
     .product-card:hover {
@@ -84,57 +86,57 @@
     <p>Teléfono: 50138102</p>
   </div>
 
-  <div class="container mt-5">
-    <div class="row g-4">
+  <div class="container mt-4">
+    <div class="row g-4 justify-content-center">
 
       <!-- Producto Jamaica -->
-      <div class="col-md-3">
-        <div class="card product-card">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
+        <div class="card product-card flex-fill">
           <img src="img/jamaica.png" class="card-img-top" alt="Flor de Jamaica">
           <div class="card-body">
             <h5 class="card-title">Flor de Jamaica 454g</h5>
             <p class="card-text">Flor natural deshidratada, ideal para bebidas y cocina.</p>
             <p class="text-success fw-bold">Q25.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
           </div>
         </div>
       </div>
 
       <!-- Producto Bicarbonato -->
-      <div class="col-md-3">
-        <div class="card product-card">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
+        <div class="card product-card flex-fill">
           <img src="img/bicarbonato.png" class="card-img-top" alt="Bicarbonato">
           <div class="card-body">
             <h5 class="card-title">Bicarbonato 227g</h5>
             <p class="card-text">Para cocina, limpieza y usos múltiples.</p>
             <p class="text-success fw-bold">Q12.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
           </div>
         </div>
       </div>
 
       <!-- Producto Miga -->
-      <div class="col-md-3">
-        <div class="card product-card">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
+        <div class="card product-card flex-fill">
           <img src="img/miga.png" class="card-img-top" alt="Miga de Pan">
           <div class="card-body">
             <h5 class="card-title">Miga de Pan 250g</h5>
             <p class="card-text">Ideal para empanizados y recetas caseras.</p>
             <p class="text-success fw-bold">Q10.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
           </div>
         </div>
       </div>
 
       <!-- Producto Tajín -->
-      <div class="col-md-3">
-        <div class="card product-card">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
+        <div class="card product-card flex-fill">
           <img src="img/tajin.png" class="card-img-top" alt="Tajín Artesanal">
           <div class="card-body">
             <h5 class="card-title">Tajín Artesanal 100g</h5>
             <p class="card-text">Condimento con chile, limón y sal. 100% artesanal.</p>
             <p class="text-success fw-bold">Q15.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
           </div>
         </div>
       </div>
