--- a/index.html
+++ b/index.html
@@ -1,95 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Catálogo Sabores S&C</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
+    :root {
+      --primary: #a05b3b;
+      --accent: #f3e2d3;
+      --text-dark: #3d2c1b;
+      --text-light: #6c6c6c;
+    }
+
     body {
-      background-color: #fdf7f0;
+      background-color: #fdfaf7;
       font-family: 'Segoe UI', sans-serif;
+      color: var(--text-dark);
     }
 
     .header {
-      background: linear-gradient(to right, #fff8f0, #f3e2cf);
-      padding: 2.5rem 1rem 2rem;
+      background: linear-gradient(135deg, #fff3e0, #ffe0b2);
+      padding: 3rem 1rem 2rem;
       text-align: center;
-      border-bottom: 4px solid #cba27c;
-      animation: fadeIn 1s ease-in-out;
+      position: relative;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
 
     .header h1 {
-      font-size: 2.2rem;
-      font-weight: 700;
-      color: #7B4F2A;
+      font-size: 2.8rem;
+      font-weight: bold;
       margin-bottom: 0.5rem;
     }
 
-    .header .brand-name {
-      font-size: 1.8rem;
-      font-weight: 800;
-      background: linear-gradient(to right, #a05b3b, #c7996d);
+    .brand-name {
+      font-size: 2.2rem;
+      background: linear-gradient(to right, var(--primary), #e1b87d);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-      margin-bottom: 0.6rem;
+      font-weight: 800;
       font-family: 'Georgia', serif;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+      margin-bottom: 0.5rem;
+      text-shadow: 1px 1px rgba(0,0,0,0.05);
     }
 
     .header p {
-      font-size: 1rem;
-      color: #555;
-      margin: 0;
+      font-size: 1.1rem;
+      color: var(--text-light);
+      margin-bottom: 0.3rem;
     }
 
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-        transform: translateY(-10px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    .whatsapp-header {
+      font-size: 1.2rem;
+      color: #25D366;
+      font-weight: bold;
     }
 
     .product-card {
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      overflow: hidden;
-      transition: transform 0.2s;
-      height: 100%;
+      border: none;
+      border-radius: 16px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.08);
+      background: #fff;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .product-card:hover {
-      transform: scale(1.02);
+      transform: translateY(-6px);
+      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+    }
+
+    .product-card img {
+      border-bottom: 1px solid #f1e0cd;
+      padding: 10px;
+      background-color: #fdf8f4;
+    }
+
+    .card-body h5 {
+      font-weight: 700;
+      color: var(--text-dark);
+    }
+
+    .card-text {
+      font-size: 0.95rem;
+      color: var(--text-light);
+    }
+
+    .btn-whatsapp {
+      background-color: #25D366;
+      border: none;
+      width: 100%;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .btn-whatsapp i {
+      margin-right: 5px;
     }
 
     .footer {
-      background-color: #a05b3b;
+      background-color: var(--primary);
       color: white;
       text-align: center;
-      padding: 1rem;
-      margin-top: 3rem;
+      padding: 1.2rem;
+      margin-top: 4rem;
+      font-size: 0.95rem;
+    }
+
+    @media (max-width: 576px) {
+      .header h1 {
+        font-size: 2rem;
+      }
+      .brand-name {
+        font-size: 1.6rem;
+      }
     }
   </style>
 </head>
 <body>
-
-  <div class="header">
+  <header class="header">
     <h1>Catálogo de Productos</h1>
     <div class="brand-name">Sabores S&C</div>
     <p>Distribuido y empacado por Sabores S&C</p>
-    <p>Teléfono: 50138102</p>
-  </div>
+    <p class="whatsapp-header">
+      <i class="bi bi-whatsapp"></i> WhatsApp: 50138102
+    </p>
+  </header>
 
-  <div class="container mt-4">
+  <main class="container py-5">
     <div class="row g-4 justify-content-center">
-
-      <!-- Producto Jamaica -->
+      <!-- Productos -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
         <div class="card product-card flex-fill">
           <img src="img/jamaica.png" class="card-img-top" alt="Flor de Jamaica">
@@ -97,12 +139,13 @@
             <h5 class="card-title">Flor de Jamaica 454g</h5>
             <p class="card-text">Flor natural deshidratada, ideal para bebidas y cocina.</p>
             <p class="text-success fw-bold">Q25.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" target="_blank" class="btn btn-whatsapp">
+              <i class="bi bi-whatsapp"></i> Pedir por WhatsApp
+            </a>
           </div>
         </div>
       </div>
 
-      <!-- Producto Bicarbonato -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
         <div class="card product-card flex-fill">
           <img src="img/bicarbonato.png" class="card-img-top" alt="Bicarbonato">
@@ -110,12 +153,13 @@
             <h5 class="card-title">Bicarbonato 227g</h5>
             <p class="card-text">Para cocina, limpieza y usos múltiples.</p>
             <p class="text-success fw-bold">Q12.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" target="_blank" class="btn btn-whatsapp">
+              <i class="bi bi-whatsapp"></i> Pedir por WhatsApp
+            </a>
           </div>
         </div>
       </div>
 
-      <!-- Producto Miga -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
         <div class="card product-card flex-fill">
           <img src="img/miga.png" class="card-img-top" alt="Miga de Pan">
@@ -123,12 +167,13 @@
             <h5 class="card-title">Miga de Pan 250g</h5>
             <p class="card-text">Ideal para empanizados y recetas caseras.</p>
             <p class="text-success fw-bold">Q10.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" target="_blank" class="btn btn-whatsapp">
+              <i class="bi bi-whatsapp"></i> Pedir por WhatsApp
+            </a>
           </div>
         </div>
       </div>
 
-      <!-- Producto Tajín -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
         <div class="card product-card flex-fill">
           <img src="img/tajin.png" class="card-img-top" alt="Tajín Artesanal">
@@ -136,17 +181,17 @@
             <h5 class="card-title">Tajín Artesanal 100g</h5>
             <p class="card-text">Condimento con chile, limón y sal. 100% artesanal.</p>
             <p class="text-success fw-bold">Q15.00</p>
-            <a href="https://wa.me/50250138102" class="btn btn-success w-100">Solicitar vía WhatsApp</a>
+            <a href="https://wa.me/50250138102" target="_blank" class="btn btn-whatsapp">
+              <i class="bi bi-whatsapp"></i> Pedir por WhatsApp
+            </a>
           </div>
         </div>
       </div>
-
     </div>
-  </div>
+  </main>
 
-  <div class="footer">
+  <footer class="footer">
     © 2025 Sabores S&C - Todos los derechos reservados
-  </div>
-
+  </footer>
 </body>
 </html>
